--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@
   --size-700: 3rem;
   --size-800: 4rem;
   --size-900: 5rem;
+
+  --color-1: #442288;
+  --color-2: #6ca2ea;
+  --color-3: #b5d33d;
+  --color-4: #fed23f;
+  --color-5: #eb7d5b;
+  --angle: 0deg;
 }
 
 @media (min-width: 50em) {
@@ -53,7 +60,7 @@
   }
 }
 
-// https://piccalil.li/blog/a-modern-css-reset
+/* CSS Reset */
 
 /* Box sizing rules */
 *,
@@ -225,7 +232,7 @@ body {
     padding: var(--size-700);
     inset: 7rem var(--size-400) auto;
     max-width: 25rem;
-    margin-left: auto;
+    margin-inline: auto;
     background: var(--clr-neutral-100);
     border-radius: var(--size-100);
     box-shadow: 0 0 0.75em rgb(0, 0, 0, 0.05);
@@ -359,4 +366,8 @@ body {
   .display-md-inline-flex {
     display: inline-flex;
   }
+}
+
+.headshot-img {
+  border-radius: 10em;
 }
