--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,11 @@ body {
   box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
 }
 
+.cv-button {
+  text-decoration: none;
+  color: var(--clr-neutral-100);
+}
+
 .button[data-type="inverted"] {
   background-color: var(--clr-neutral-100);
   color: var(--clr-accent-400);
