--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
     />
     <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="{% link /assets/css/fontawesome-all.min.css %}" />
+    <link rel="stylesheet" href="{% link /assets/css/style.css %}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -53,7 +53,7 @@
     <header class="primary-header">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#"><img src="img/logo.png" alt="Manage" width="68%" /></a>
+          <a href="#"><img src="{% link /assets/images/logo.png %}" alt="Manage" width="68%" /></a>
           <button
             class="mobile-nav-toggle"
             aria-controls="primary-navigation"
@@ -61,13 +61,13 @@
           >
             <img
               class="icon-hamburger"
-              src="img/icon-hamburger.svg"
+              src="{% link /assets/images/icon-hamburger.svg %}"
               alt=""
               aria-hidden="true"
             />
             <img
               class="icon-close"
-              src="img/icon-close.svg"
+              src="{% link /assets/images/icon-close.svg %}"
               alt=""
               aria-hidden="true"
             />
@@ -104,4 +104,6 @@
       </div>
     </footer>
   </body>
+
+  <script type="module" src="{% link /assets/js/main.js %}"></script>
 </html>
