--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,32 @@
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+---
+layout: default
+title: test
+---
 
-{{ content }}
+<main>
+    <section class="padding-block-900">
+      <div class="container | block-flow">
+        <div class="even-columns">
+          <div>
+            <h1 class="fs-primary-heading fw-bold">
+                {{ page.title }}
+            </h1>
+            <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+
+            {{ content }}
+          </div>
+
+          <div class="container">
+            <a href="#">
+              <img
+                class="headshot-img"
+                src="img/headshot.JPG"
+                alt="Manage"
+                width="40%"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+</main>
