Add placeholder content for writing and contact pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
           </button>
           {% include navigation.html %}
           <button class="button | display-sm-none display-md-inline-flex">
-            <a class="cv-button" href="docs/cv.pdf" target="_blank"
+            <a class="cv-button" href="{% link /assets/docs/cv.pdf %}" target="_blank"
               >View my CV</a
             >
           </button>
